<resources>
    <string name="app_name">OCAM</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="title">OCAM</string>
    <string name="drawer_options_header">Opciones</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="cuenta">Cuenta</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="title_activity_track">Map</string>
    <string name="action_settings">Settings</string>
    <string name="register">Registro</string>
    <string name="title_activity_register">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repassword">Repite password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_login">Nombre de usuario</string>
    <string name="joinActivityDisconnected">Te has unido a la actividad sin conexión. Recogeremos tus datos de posición con normalidad y cuando recuperes la conexion, si la password es correcta, te unirás a la actividad.</string>
    <string name="condicionUnirseActividad">Al unirte a la actividad y mientras esté en curso, enviaremos tu posición cada cierto tiempo para mantenerte monitorizado. También podrás ver la posición del resto del grupo.</string>
    <string name="startActivityDisconnected">Iniciaste la actividad sin conexión. Cuando la recuperes se enviarán los datos. Recogeremos hasta entonces tus reportes de posición con normalidad</string>
    <string name="noConnectionWarning">No tienes conexión. Los datos podrían no ser los actuales.</string>
    <string name="noConnectionOption">Opción no disponible sin conexión</string>
    <string name="gpsWarning">Con el fin de mejorar la experiencia y que los datos de posición sean más precisos y sin conexión a internet, es necesario que actives la localización GPS de tu móvil, y el modo sea el adecuado.</string>
    <string name="closeActivityDisconnectedWarn">Cierras la actividad sin conexión. Cuando la recuperes se cerrará oficialmente. Dejamos de obtener posiciones en tu dispositivo.</string>
    <string name="disconnectedLeaveWarning">Abandonas la actividad sin conexión. En cuanto la recuperes saldrás de ella y se deshecharán los últimos reportes de posición recogidos.</string>
    <string name="hint_passwordAct">Password actual</string>
    <string name="hint_newPassword">Nueva password</string>
    <string name="hint_repassword">Repite nueva password</string>
    <string name="actualizarDatos">Actualizar datos</string>
    <string name="aviso_unido">¡Participas en la actividad!</string>
    <string name="configuracion">Configuración</string>
    <string name="title_activity_configuracion">ConfiguracionActivity</string>
</resources>