<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="20sp"
    android:paddingRight="20sp"
    android:background="#FAFAFA"
    android:orientation="vertical"
    tools:context="com.ocam.login.LoginActivity">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/ilUsername"
        android:layout_width="match_parent"
        android:theme="@style/TextLabel"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel"
        android:layout_marginTop="30sp">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_password"/>

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/cbRecuerda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Recuérdame"
        android:theme="@style/AppTheme"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/login"
        android:id="@+id/btLogin"
        android:layout_marginTop="30sp"
        android:background="@color/colorPrimary"
        android:onClick="login"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/register"
        android:id="@+id/btRegistro"
        android:layout_marginTop="30sp"
        android:background="@color/colorPrimary"
        android:onClick="register"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:theme="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_marginTop="30sp"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

</LinearLayout>