<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10sp"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="20sp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10sp"
        android:paddingRight="10sp">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="30sp"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/idUsername"
            android:layout_width="match_parent"
            android:theme="@style/TextLabel"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/idEmail"
            android:layout_width="match_parent"
            android:theme="@style/TextLabel"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/idPassword"
            android:layout_width="match_parent"
            android:theme="@style/TextLabel"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_passwordAct"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/idNewPassword"
            android:layout_width="match_parent"
            android:theme="@style/TextLabel"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_newpw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_newPassword"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/idReNewPassword"
            android:layout_width="match_parent"
            android:theme="@style/TextLabel"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_pw2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_repassword"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/actualizarDatos"
            android:id="@+id/btActualizar"
            android:layout_marginTop="30sp"
            android:background="@color/colorPrimary"/>
    </LinearLayout>
</ScrollView>